# midiVisualizer2

./: CMakeLists.txt
src/: MusicInstruments.cpp  MusicInstruments.h  fluidsynthwrapper.cpp  fluidsynthwrapper.h  main.cpp  midiFile.cpp  midiFile.h  midiPlayer.cpp  midiPlayer.h  piano.cpp  piano.h
